k8s/auth-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "3"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"auth","namespace":"restauranty"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"auth"}},"template":{"metadata":{"labels":{"app":"auth"}},"spec":{"containers":[{"command":["node","server.js"],"env":[{"name":"HOST","value":"0.0.0.0"},{"name":"PORT","value":"3001"},{"name":"MONGODB_URI","value":"mongodb://mongo:27017/flor"}],"image":"fmtorres/restauranty-auth:0.1.0","imagePullPolicy":"IfNotPresent","name" [...]
  creationTimestamp: "2025-09-16T00:00:45Z"
  generation: 3
  name: auth
  namespace: restauranty
  resourceVersion: "30285"
  uid: 23781330-bfce-4fc9-99a0-f0adf21dcade
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: auth
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: auth
    spec:
      containers:
      - command:
        - node
        - server.js
        env:
        - name: SECRET
          valueFrom:
            secretKeyRef:
              key: SECRET
              name: auth-env
        - name: MONGODB_URI
          valueFrom:
            secretKeyRef:
              key: MONGODB_URI
              name: auth-env
        - name: CLOUD_NAME
          valueFrom:
            secretKeyRef:
              key: CLOUD_NAME
              name: auth-env
        - name: CLOUD_API_KEY
          valueFrom:
            secretKeyRef:
              key: CLOUD_API_KEY
              name: auth-env
        - name: CLOUD_API_SECRET
          valueFrom:
            secretKeyRef:
              key: CLOUD_API_SECRET
              name: auth-env
        - name: PORT
          valueFrom:
            secretKeyRef:
              key: PORT
              name: auth-env
        image: restauranty/auth:local
        imagePullPolicy: IfNotPresent
        name: auth
        ports:
        - containerPort: 3001
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-09-16T07:44:20Z"
    lastUpdateTime: "2025-09-16T07:44:20Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-09-16T00:00:45Z"
    lastUpdateTime: "2025-09-16T07:44:59Z"
    message: ReplicaSet "auth-76ff6d876b" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 3
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
