k8s/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: restaurantyacrshishir.azurecr.io/auth:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
        envFrom:
        - secretRef:
            name: restauranty-secrets
---
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  selector:
    app: auth
  ports:
  - port: 3001
    targetPort: 3001
