k8s/client-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "20"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"client","namespace":"restauranty"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"client"}},"template":{"metadata":{"labels":{"app":"client"}},"spec":{"containers":[{"image":"restauranty/client:fix-signup-2","imagePullPolicy":"IfNotPresent","name":"client","ports":[{"containerPort":80}]}]}}}}
  creationTimestamp: "2025-09-16T00:00:45Z"
  generation: 20
  name: client
  namespace: restauranty
  resourceVersion: "56284"
  uid: 69b48403-fceb-4f15-b0bf-0d83c334d9b1
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: client
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-09-16T12:37:42+02:00"
      creationTimestamp: null
      labels:
        app: client
    spec:
      containers:
      - image: restauranty/client:fix-signup-ui-5
        imagePullPolicy: IfNotPresent
        name: client
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-09-16T20:13:59Z"
    lastUpdateTime: "2025-09-16T20:13:59Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-09-16T20:13:58Z"
    lastUpdateTime: "2025-09-16T20:20:14Z"
    message: ReplicaSet "client-75c757477c" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 20
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
