k8s/discounts-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"discounts","namespace":"restauranty"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"discounts"}},"template":{"metadata":{"labels":{"app":"discounts"}},"spec":{"containers":[{"command":["node","server.js"],"env":[{"name":"HOST","value":"0.0.0.0"},{"name":"PORT","value":"3002"},{"name":"MONGODB_URI","value":"mongodb://mongo:27017/flor"}],"image":"fmtorres/restauranty-discounts:0.1.0","imagePullPolicy":" [...]
  creationTimestamp: "2025-09-16T00:00:45Z"
  generation: 1
  name: discounts
  namespace: restauranty
  resourceVersion: "2737"
  uid: 00a7c4fb-bd0f-4fd8-9787-90fe643ad717
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: discounts
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: discounts
    spec:
      containers:
      - command:
        - node
        - server.js
        env:
        - name: HOST
          value: 0.0.0.0
        - name: PORT
          value: "3002"
        - name: MONGODB_URI
          value: mongodb://mongo:27017/flor
        image: fmtorres/restauranty-discounts:0.1.0
        imagePullPolicy: IfNotPresent
        name: discounts
        ports:
        - containerPort: 3002
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-09-16T00:03:27Z"
    lastUpdateTime: "2025-09-16T00:03:27Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-09-16T00:00:45Z"
    lastUpdateTime: "2025-09-16T00:03:27Z"
    message: ReplicaSet "discounts-6f6c587ddf" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
