k8s/discounts-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"discounts"},"name":"discounts","namespace":"restauranty"},"spec":{"ports":[{"port":3002,"targetPort":3002}],"selector":{"app":"discounts"}}}
  creationTimestamp: "2025-09-15T23:58:13Z"
  labels:
    app: discounts
  name: discounts
  namespace: restauranty
  resourceVersion: "2302"
  uid: b6c495e6-b671-4c0d-8cee-db315e8f62d3
spec:
  clusterIP: 10.97.100.144
  clusterIPs:
  - 10.97.100.144
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 3002
    protocol: TCP
    targetPort: 3002
  selector:
    app: discounts
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
