k8s/items-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"items","namespace":"restauranty"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"items"}},"template":{"metadata":{"labels":{"app":"items"}},"spec":{"containers":[{"command":["node","server.js"],"env":[{"name":"HOST","value":"0.0.0.0"},{"name":"PORT","value":"3003"},{"name":"MONGODB_URI","value":"mongodb://mongo:27017/flor"}],"image":"fmtorres/restauranty-items:0.1.0","imagePullPolicy":"IfNotPresent","n [...]
  creationTimestamp: "2025-09-16T00:00:45Z"
  generation: 1
  name: items
  namespace: restauranty
  resourceVersion: "2765"
  uid: d8f3a3c1-7a3d-4a18-820e-73f5169597e3
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: items
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: items
    spec:
      containers:
      - command:
        - node
        - server.js
        env:
        - name: HOST
          value: 0.0.0.0
        - name: PORT
          value: "3003"
        - name: MONGODB_URI
          value: mongodb://mongo:27017/flor
        image: fmtorres/restauranty-items:0.1.0
        imagePullPolicy: IfNotPresent
        name: items
        ports:
        - containerPort: 3003
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-09-16T00:03:34Z"
    lastUpdateTime: "2025-09-16T00:03:34Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-09-16T00:00:45Z"
    lastUpdateTime: "2025-09-16T00:03:34Z"
    message: ReplicaSet "items-5d9549fc85" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
