k8s/items-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: items
spec:
  replicas: 1
  selector:
    matchLabels:
      app: items
  template:
    metadata:
      labels:
        app: items
    spec:
      containers:
      - name: items
        image: restaurantyacrshishir.azurecr.io/items:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3003
        envFrom:
        - secretRef:
            name: restauranty-secrets
---
apiVersion: v1
kind: Service
metadata:
  name: items
spec:
  selector:
    app: items
  ports:
  - port: 3003
    targetPort: 3003
