k8s/mongo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"mongo"},"name":"mongo","namespace":"restauranty"},"spec":{"ports":[{"port":27017,"targetPort":27017}],"selector":{"app":"mongo"}}}
  creationTimestamp: "2025-09-15T23:58:13Z"
  labels:
    app: mongo
  name: mongo
  namespace: restauranty
  resourceVersion: "2291"
  uid: b21846bd-d56f-41e9-8d2d-1154a8a36bb0
spec:
  clusterIP: 10.103.116.16
  clusterIPs:
  - 10.103.116.16
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: mongo
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
